syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.douyu.common.v1";
option java_outer_classname = "HelloWorldProtoV1";
option go_package = "common/v1;commonv1";

package common.v1;

// Data ...
message CommonData {
  // message ...
  string message = 1;
}
